@@ -19,6 +19,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #12643: code.InteractiveConsole now respects sys.excepthook when
+  displaying exceptions (Patch by Aaron Iles)
+
 - Issue #13579: string.Formatter now understands the 'a' conversion specifier.
 
 - Issue #15595: Fix subprocess.Popen(universal_newlines=True)
